添加忽略文件

--- a/.settings/com.powerflasher.fdt.core.prefs
+++ b/.settings/com.powerflasher.fdt.core.prefs
@@ -1,3 +1,4 @@
+#Wed Nov 06 14:22:59 CST 2013
 com.powerflasher.fdt.core.Language=AS3
 com.powerflasher.fdt.core.SdkName=Apache Flex 4.9.1 FP11.1 en_US
 eclipse.preferences.version=1
